Add Korean weather resources.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,79 @@
 
     <string name="dust_id">LgrUg9w0Kjz3Hp3c2InxlATULfE0bnkL7zjEP5dS9IcwJF18Cp2xph6hzsSSgzJzS19a0CI11KKyrrgrAj%2FtvQ%3D%3D</string>
     <string name="weather_id">af40d953f86a2313ecd3a174b34d2f9f</string>
+
+    <string name="weather_200">가벼운 비를 동반한 천둥구름</string>
+    <string name="weather_201">비를 동반한 천둥구름</string>
+    <string name="weather_202">폭우를 동반한 천둥구름</string>
+    <string name="weather_210">약한 천둥구름</string>
+    <string name="weather_211">천둥구름</string>
+    <string name="weather_212">강한 천둥구름</string>
+    <string name="weather_221">불규칙적 천둥구름</string>
+    <string name="weather_230">약한 연무를 동반한 천둥구름</string>
+    <string name="weather_231">연무를 동반한 천둥구름</string>
+    <string name="weather_232">강한 안개비를 동반한 천둥구름</string>
+    <string name="weather_300">가벼운 안개비</string>
+    <string name="weather_301">안개비</string>
+    <string name="weather_302">강한 안개비</string>
+    <string name="weather_310">가벼운 적은비</string>
+    <string name="weather_311">적은비</string>
+    <string name="weather_312">강한 적은비</string>
+    <string name="weather_313">소나기와 안개비</string>
+    <string name="weather_314">강한 소나기와 안개비</string>
+    <string name="weather_321">소나기</string>
+    <string name="weather_500">악한 비</string>
+    <string name="weather_501">중간 비</string>
+    <string name="weather_502">강한 비</string>
+    <string name="weather_503">매우 강한 비</string>
+    <string name="weather_504">극심한 비</string>
+    <string name="weather_511">우박</string>
+    <string name="weather_520">rain	약한 소나기 비</string>
+    <string name="weather_521">소나기 비</string>
+    <string name="weather_522">강한 소나기 비</string>
+    <string name="weather_531">불규칙적 소나기 비</string>
+    <string name="weather_600">가벼운 눈</string>
+    <string name="weather_601">눈</string>
+    <string name="weather_602">강한 눈</string>
+    <string name="weather_611">진눈깨비</string>
+    <string name="weather_612">소나기 진눈깨비</string>
+    <string name="weather_615">약한 비와 눈</string>
+    <string name="weather_616">비와 눈</string>
+    <string name="weather_620">약한 소나기 눈</string>
+    <string name="weather_621">소나기 눈</string>
+    <string name="weather_622">강한 소나기 눈</string>
+    <string name="weather_701">박무</string>
+    <string name="weather_711">연기</string>
+    <string name="weather_721">연무</string>
+    <string name="weather_731">모래 먼지</string>
+    <string name="weather_741">안개</string>
+    <string name="weather_751">모래</string>
+    <string name="weather_761">먼지</string>
+    <string name="weather_762">화산재</string>
+    <string name="weather_771">돌풍</string>
+    <string name="weather_781">토네이도</string>
+    <string name="weather_800">구름 한 점 없는 맑은 하늘</string>
+    <string name="weather_801">약간의 구름이 낀 하늘</string>
+    <string name="weather_802">드문드문 구름이 낀 하늘</string>
+    <string name="weather_803">구름이 거의 없는 하늘</string>
+    <string name="weather_804">구름으로 뒤덮인 흐린 하늘</string>
+    <string name="weather_900">토네이도</string>
+    <string name="weather_901">태풍</string>
+    <string name="weather_902">허리케인</string>
+    <string name="weather_903">한랭</string>
+    <string name="weather_904">고온</string>
+    <string name="weather_905">바람부는</string>
+    <string name="weather_906">우박</string>
+    <string name="weather_951">바람이 거의 없는</string>
+    <string name="weather_952">약한 바람</string>
+    <string name="weather_953">부드러운 바람</string>
+    <string name="weather_954">중간 세기 바람</string>
+    <string name="weather_955">신선한 바람</string>
+    <string name="weather_956">센 바람</string>
+    <string name="weather_957">돌풍에 가까운 센 바람</string>
+    <string name="weather_958">돌풍</string>
+    <string name="weather_959">심각한 돌풍</string>
+    <string name="weather_960">폭풍</string>
+    <string name="weather_961">강한 폭풍</string>
+    <string name="weather_962">허리케인</string>
+
 </resources>
